src/app/pages/chat/chat.component.scss
.main-section {
  background-color: #fff;
  display: flex;
  height: calc(100vh - 182px);
}
.chat-selection {
  display: flex;
  flex-direction: column;
  padding: 20px 15px;
  width: 250px;
  opacity: 1;
  transition:
    width 1s ease,
    opacity 0.5s ease;
}
.chat-selection.hide {
  width: 0;
  opacity: 0;
  padding: 20px 0;
}
.chat-selection.active {
  width: 250px;
  opacity: 1;
  padding: 20px 15px;
}
.chat-item {
  display: flex;
  align-items: center;
  padding: 10px 5px;
  border-radius: 10px;
  background-color: #fff;
  justify-content: space-between;
  margin-top: 15px;
  box-shadow:
    0px 4px 6px rgba(0, 0, 0, 0.1),
    0px 1px 3px rgba(0, 0, 0, 0.2);

  .left-container {
    padding-left: 8px;
  }
  .owner {
    font-size: 1rem;
  }
  .game {
    color: rgba(128, 128, 128, 0.849);
  }
  .location {
    color: #1a0202;
  }
  .right-container {
    display: flex;
    background-color: rgb(223, 44, 44);
    color: #fff;
    font-weight: 600;
    font-size: 0.8rem;
    width: 25px;
    height: 25px;
    padding: 10px;
    border-radius: 50px;
    justify-content: center;
    align-items: center;
    margin-right: 5px;
  }
}
.chat-item.active {
  border: 2px solid #007bff;  /* blue border for active chat */
}
.chat-input-container {
  position: relative;
  bottom: 0;
  right: 0;
  background-color: #fff;
  padding: 10px;
  padding-bottom: 30px;
  display: flex;
  align-items: center;
  box-shadow: 0px -1px 1px rgba(0, 0, 0, 0.1);
}
.chat-input-container.full {
  width: 100%;
}
.chat-input-field {
  flex: 1;
}
.send-button {
  margin-left: 15px;
  margin-right: 12px;
  mat-icon {
    color: blue;
    font-size: 1.6rem;
  }
}
.chat-container {
  flex-grow: 1; /* Allows the container to grow and take up available space */
  display: flex;
  flex-direction: column; /* Stacks children vertically */
  position: relative;
  overflow: hidden;
}
.chat-messages {
  display: flex;
  flex-direction: column;
  padding: 20px 30px;
  overflow-y: auto;
  height: 100%;
  padding-bottom: 80px;
}
.message-wrapper {
  display: flex;
  justify-content: flex-start; /* Default alignment */
  width: 100%;
}
.message-wrapper.sent {
  justify-content: flex-end; /* Aligns to the right */
}
.message {
  max-width: 60%;
  margin-bottom: 15px;
  padding: 10px;
  border-radius: 15px;
}
.message-content {
  position: relative;
  padding: 10px;
}
.message-time {
  position: absolute;
  bottom: -7px;
  right: -3px;
  font-size: 10px;
  color: #aaa;
}
.message-read-indicator {
  position: absolute;
  bottom: 16px;
  right: -2px;
  width: 6px;
  height: 6px;
  background-color: blue;
  border-radius: 50%;
}
.message-read-indicator.read{
  background-color: green;
}
.message.received {
  background-color: #f1f1f1;
}
.message.sent {
  background-color: #dcf8c6;
}

